[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://imagesFiles/Main_Scene/StartLevel_Button.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Options/OptionsMenu.tscn" type="PackedScene" id=3]

[node name="PauseMenu" type="Popup"]
pause_mode = 2
margin_left = 334.886
margin_top = 79.7957
margin_right = 634.886
margin_bottom = 479.796
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_left = 4.0
margin_top = -2.0
margin_right = 304.0
margin_bottom = 398.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="TextureButton" parent="."]
margin_left = 60.0
margin_top = 13.0
margin_right = 242.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( -343, 177 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ResumeButton"]
margin_left = 25.0
margin_top = 15.0
margin_right = 152.0
margin_bottom = 68.0
mouse_filter = 2

[node name="Label" type="Label" parent="ResumeButton"]
margin_left = 7.0
margin_top = 5.0
margin_right = 177.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="TextureButton" parent="."]
margin_left = 65.0
margin_top = 102.0
margin_right = 247.0
margin_bottom = 195.0
rect_pivot_offset = Vector2( -343, 177 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="RestartButton"]
margin_left = 27.0
margin_top = 15.0
margin_right = 154.0
margin_bottom = 68.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="RestartButton"]
margin_left = 5.0
margin_top = 6.0
margin_right = 175.0
margin_bottom = 81.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="."]
margin_left = 66.0
margin_top = 194.0
margin_right = 248.0
margin_bottom = 287.0
rect_pivot_offset = Vector2( -343, 177 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="OptionsButton"]
margin_left = 28.0
margin_top = 16.0
margin_right = 155.0
margin_bottom = 69.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="OptionsButton"]
margin_left = 8.0
margin_top = 8.0
margin_right = 178.0
margin_bottom = 83.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="TextureButton" parent="."]
margin_left = 70.0
margin_top = 290.0
margin_right = 252.0
margin_bottom = 383.0
rect_pivot_offset = Vector2( -343, 177 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="MainMenuButton"]
margin_left = 24.0
margin_top = 15.0
margin_right = 151.0
margin_bottom = 68.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MainMenuButton"]
margin_left = 6.0
margin_top = 7.0
margin_right = 176.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Main Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
